[gd_scene load_steps=13 format=2]

[ext_resource path="res://Scripts/Nature/WaterAreaNoShader.gd" type="Script" id=1]
[ext_resource path="res://prefabs/Misc/Events/PlaySound.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sounds/splash1.wav" type="AudioStream" id=3]
[ext_resource path="res://Sounds/splash2.wav" type="AudioStream" id=4]
[ext_resource path="res://Sounds/splash3.wav" type="AudioStream" id=5]
[ext_resource path="res://Sounds/splash4.wav" type="AudioStream" id=6]
[ext_resource path="res://prefabs/Effects/BigSplash.tscn" type="PackedScene" id=7]
[ext_resource path="res://prefabs/Effects/Droplets.tscn" type="PackedScene" id=8]

[sub_resource type="Curve" id=1]
_data = [ Vector2( 0, 0.490909 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CubeMesh" id=2]

[sub_resource type="SpatialMaterial" id=3]
flags_transparent = true
albedo_color = Color( 0.219608, 0.603922, 0.560784, 0.364706 )

[sub_resource type="BoxShape" id=4]

[node name="WaterAreaNoShader" type="Area"]
script = ExtResource( 1 )
distribution = SubResource( 1 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
visible = false
mesh = SubResource( 2 )
material/0 = SubResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1, 0 )
visible = false
shape = SubResource( 4 )

[node name="Splash" parent="." instance=ExtResource( 2 )]
is3D = true
random_sounds = [ ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ) ]
volume = 2.0

[node name="BigSplash" parent="." instance=ExtResource( 7 )]

[node name="Droplets" parent="." instance=ExtResource( 8 )]
[connection signal="body_entered" from="." to="." method="_on_WaterAreaNoShader_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_WaterAreaNoShader_body_exited"]
